# password_manager

./: CMakeLists.txt  README.md  functions.cpp  header.h  main.cpp
files/: new_file  new_file_2  new_file_3  source.txt  source_file.txt  source_file_2.txt
